--- a/prepros.config
+++ b/prepros.config
@@ -211,10 +211,10 @@
       },
       "dart-sass": {
         "indentType": "space",
-        "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
-        "sourceMap": false
+        "sourceMap": false,
+        "allowWildcardImports": false
       },
       "haml": {
         "doubleQuoteAttributes": true
@@ -299,7 +299,6 @@
           "properties": true,
           "pure_funcs": [],
           "pure_getters": false,
-          "reduce_funcs": true,
           "reduce_vars": true,
           "sequences": true,
           "side_effects": true,
@@ -314,7 +313,8 @@
           "unsafe_proto": false,
           "unsafe_regexp": false,
           "unsafe_undefined": false,
-          "unused": true
+          "unused": true,
+          "reduce_funcs": true
         },
         "mangle": {
           "eval": false,
@@ -345,13 +345,13 @@
       },
       "node-sass": {
         "indentType": "space",
-        "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
         "outputStyle": "expanded",
         "precision": 10,
         "sourceMap": false,
-        "sourceComments": false
+        "sourceComments": false,
+        "allowWildcardImports": false
       },
       "png": {
         "quality": 90
